fixed changing url to resource in test, added example of response with custom message